test to see if working on browser

--- a/index.html
+++ b/index.html
@@ -24,5 +24,17 @@
         </header>
 
         <div id="welcome"><div id="welcome-text">Welcome, wonderful person!</div></div>
+
+        <div id="buttons">
+            <div>
+                <input type="button" value="Shop Now" id="shop-now" class="first-row-button">
+                <input type="text" placeholder="Search for Products" id="search-second" class="first-row-button">
+            </div>
+            <div>
+                <input type="button" value="Log In/ Sign Up" id="login" class="sec-row-button">
+                <input type="button" value="For Vendors" id="for-vendors" class="sec-row-button">
+            </div>
+        </div>
+
     </body>
 </html>
