--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Bayong</title>
         <link rel="icon" href="static/Bayong.ico">
-        <link rel="stylesheet" href="index-styles.css">
+        <link rel="stylesheet" href="styles.css">
         <script src="Bayong.js"></script>
     </head>
 
