fixed header for phones

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <img id="title" src="static/bayong-title.png" alt="Bayong">
             <div>
                 <label for="search" id="search-text" class="header-buttons-text">Search</label>
-                <input type="image" id="search" class="header-buttons" name="search" src="static/Extra/search-button.png" alt="Search for products" onclick="search-ani()">
+                <input type="image" id="search" class="header-buttons" name="search" src="static/Images/search-button.png" alt="Search for products" onclick="search-ani()">
             </div>
             <div>
                 <label for="cart" id="cart-text" class="header-buttons-text">Your Bayong</label>
-                <input type="image" id="cart" class="header-buttons" name="cart" src="static/Extra/cart.png" alt="Go to cart">
+                <input type="image" id="cart" class="header-buttons" name="cart" src="static/Images/cart.png" alt="Go to cart">
             </div>
         </header>
 
