--- a/index.html
+++ b/index.html
@@ -5,21 +5,20 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Bayong</title>
-        <link rel="icon" href="static/Bayong.ico">
-        <link rel="stylesheet" href="styles.css">
-        <script src="Bayong.js"></script>
+        <link rel="icon" href="static/images/Bayong.ico">
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
 
     <body>
         <header>
-            <img id="title" src="static/bayong-title.png" alt="Bayong">
+            <img id="title" src="static/images/bayong-title.png" alt="Bayong">
             <div>
                 <label for="search" id="search-text" class="header-buttons-text">Search</label>
-                <input type="image" id="search" class="header-buttons" name="search" src="static/Images/search-button.png" alt="Search for products" onclick="search-ani()">
+                <input type="image" id="search" class="header-buttons" name="search" src="static/images/search-button.png" alt="Search for products" onclick="search-ani()">
             </div>
             <div>
                 <label for="cart" id="cart-text" class="header-buttons-text">Your Bayong</label>
-                <input type="image" id="cart" class="header-buttons" name="cart" src="static/Images/cart.png" alt="Go to cart">
+                <input type="image" id="cart" class="header-buttons" name="cart" src="static/images/cart.png" alt="Go to cart">
             </div>
         </header>
 
