I figured it out!

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Bayong</title>
         <link rel="icon" href="/static/Bayong.ico">
-        <link rel="stylesheet" href="/styles/styles.css">
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
 
     <body>
         <header>
             <div>
-                <a href="/templates/bayong.html"><img id="title" src="/static/images/bayong-title.png" alt="Bayong Homepage"></a>
+                <a href="templates/bayong.html"><img id="title" src="/static/images/bayong-title.png" alt="Bayong Homepage"></a>
             </div>
 
             <div>
